--- a/Code/BInary Classfication/ADALine with SGD.ipynb
+++ b/Code/BInary Classfication/ADALine with SGD.ipynb
@@ -23,12 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "3445b236-fccf-4b68-9fe4-b45a82a1f112",
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = \"/media/cipher/EEC07807C077D3F5/Datasets/iris.data\"\n",
+    "path = \"/media/cipher/EEC07807C077D3F5/Scikit and PyTorch/Datasets/iris.data\"\n",
     "data = pd.read_csv(path, header=None)"
    ]
   },
