--- a/Code/BInary Classfication/Perceptron.ipynb
+++ b/Code/BInary Classfication/Perceptron.ipynb
@@ -30,12 +30,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "8cc4b2da-863d-4ce0-bbf0-c6d599531b79",
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = \"D:/CIPHER/Scikit and PyTorch/Datasets/iris.data\"\n",
+    "path = \"/media/cipher/EEC07807C077D3F5/Scikit and PyTorch/Datasets/iris.data\"\n",
     "data = pd.read_csv(path, header=None)"
    ]
   },
