--- a/Code/Data Preprocessing/Feature Selection by SBS.ipynb
+++ b/Code/Data Preprocessing/Feature Selection by SBS.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "11f9fe26",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "eae76565",
    "metadata": {},
    "outputs": [
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "51cb7194",
    "metadata": {},
    "outputs": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "027efa08",
    "metadata": {},
    "outputs": [],
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "cf9ed228",
    "metadata": {},
    "outputs": [],
@@ -432,17 +432,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "7ab31d04",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.SBS at 0x7f0295408980>"
+       "<__main__.SBS at 0x7f3edeff72f0>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "be2c9524",
    "metadata": {},
    "outputs": [
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "35ad181b",
    "metadata": {},
    "outputs": [
@@ -499,12 +499,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[0, 1, 11]\n",
       "Index(['Alcohol', 'Malic acid', 'OD280/OD315 of diluted wines'], dtype='object')\n"
      ]
     }
    ],
    "source": [
     "k3 = list(sbs.subsets_[10])\n",
+    "print(k3)\n",
     "print(df_wine.columns[1:][k3])"
    ]
   },
@@ -518,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "7d477002",
    "metadata": {},
    "outputs": [
@@ -547,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "57b1bbd7",
    "metadata": {},
    "outputs": [
